# petto-kurinikku

./: README.md  services.json
client/: .env.local  jsconfig.json  package-lock.json  package.json
client/components/: address-box.js  footer.js  input.js  layout.js  logo.js  navbar.js  theme-changer.js
client/components/navbar/: link-item.js  menu-button.js  nav.js  theme-button.js
client/lib/: transliteration.js
client/pages/: _app.js  _documents.js  contact.js  doctor.js  index.js  services.js
client/pages/api/: contact.js  customer.js
client/pages/doctors/: [id].js  index.js
client/pages/services/: index.js
client/styles/: global.css
server/: .gitignore  Cargo.toml  Program.cs  appsettings.Development.json  appsettings.json
server/Controllers/: CustomersController.cs  DoctorsController.cs  ServicesController.cs
server/Models/: Customer.cs  DatabaseSettings.cs  Doctor.cs  Service.cs
server/Properties/: launchSettings.json
server/Services/: CustomersService.cs  DoctorsService.cs  ServicesService.cs
server/src/: config.rs  errors.rs  lib.rs
server/src/db/: customer.rs  doctor.rs  mod.rs  service.rs
server/src/models/: customer.rs  doctor.rs  service.rs
server/src/routes/: customer.rs  doctor.rs  mod.rs  service.rs
