[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
dotenv = "0.15.0"
mongodb = { version = "1.2.1", default-features = false, features = ["sync"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4.7"
